--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,13 @@
 *{
     box-sizing: border-box;
 }
+
 body{
     margin: 0;
     padding: 0;
     background-color: rgb(5, 5, 100);
     overflow-x: hidden;
+    user-select: none;
 }
 
 @font-face {
@@ -19,10 +21,12 @@ body{
 }
 
 .page1{
+    position: relative;
     padding-top: 80px;
     width: 100vw;
     height: 100vh;
     background-color: rgb(5, 5, 5);
+    z-index: 0;
 }
 
 .b1, .b2, .b3{
@@ -34,20 +38,35 @@ body{
     color: rgb(246, 246, 246);
     font-family: formula;
     text-align: center;
+    z-index: 2;
 }
 
 .logo{
+    clip-path: inset(0px 0px 80px 0px);
+    position: relative;
     display: block;
     opacity: 0;
     margin: 100px auto;
-    height: 200px;;
+    height: 200px;
+    z-index: 2;
+}
+
+.leclern-video{
+    position: absolute;
+    top: 0px;
+    opacity: 0;
+    height: 100vh;
+    width: 100vw;
+    object-fit: cover;
+    box-shadow: inset 0 0 8px red ;
+    z-index: 1;
 }
 
 .page2{
-    position: relative;
+    padding-top: 80px;
     opacity: 1;
     width: 100vw;
-    height: 100vh;
+    height: 80vh;
     background-color: rgb(5, 5, 5);
 }
 
@@ -62,33 +81,54 @@ body{
     width: 400px;
 }
 
-.leclern-video{
-    opacity: 0;
-    height: 0;
+.page3 {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    background-color: lightblue;
     overflow: hidden;
 }
 
-.page3 {
-    will-change: transform;
-    width: 100vw;
-    height: 100vh;
-    min-height: 100vh;
-    background-color: lightblue;
-    overflow: visible;
+.page3 h1{
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    color: rgb(23, 23, 23);
+    left: 50%;
+    transform: translate(-19%, 0%);
+    font-size: 20vw;
+    font-family: Outfit;
 }
 
-.page3 > h1{    
-    margin: 0;
-    font-size: 40vw;
-    font-family: Outfit;
+.rb20{
+    width: 100vw;
+    transform: translateX(-25px);
 }
 
 .page4{
     width: 100vw;
     height: 100vh;
-    background-color: green;
+    background-color: rgb(5,5,5);
     position: relative;
     top: 0;
+    cursor:  crosshair;
+}
+
+.string{
+    width: 100vw;
+    background-color: rgb(5,5,5);
+}
+
+.cursor{
+    opacity: 0;
+    position: absolute;
+    top: 0px;
+    height: 40px;
+    width: 40px;
+    background-color:transparent;
+    border: 5px solid #f7e686;
+    border-radius: 50%;
+    box-shadow: inset 0 0 10px 2px #fc3056, 0 0 10px 2px #fc3056;
 }
 
 
